--- a/designs.tex
+++ b/designs.tex
@@ -17,7 +17,7 @@
 \chapter{Designs}
 
 \section{Limiting to Local Gesture Recognition}
-\section{Callback Paradigm}
+\section{Function Paradigm}
 \section{Watch Each Finger Paradigm}
 \section{Watch Closest/Farthest Finger Paradigm}
 \section{Watch Context Dependent "Current" Finger Paradigm}
