--- a/main.bib
+++ b/main.bib
@@ -1,7 +1,4 @@
-@preamble{ "\newcommand{\noopsort}[1]{} "
-	# "\newcommand{\printfirst}[2]{#1} "
-	# "\newcommand{\singleletter}[1]{#1} "
-	# "\newcommand{\switchargs}[2]{#2#1} " }
+
 
  
 @mastersthesis{Mehta,
@@ -143,7 +140,122 @@ year = {2011},
   howpublished = {http://scratchjr.org/},
 }
 
+@article{ProgrammingForAll,
+ author = {Resnick, Mitchel and Maloney, John and Monroy-Hern\'{a}ndez, Andr{\'e}s and Rusk, Natalie and Eastmond, Evelyn and Brennan, Karen and Millner, Amon and Rosenbaum, Eric and Silver, Jay and Silverman, Brian and Kafai, Yasmin},
+ title = {Scratch: {P}rogramming for {A}ll},
+ journal = {Commun. ACM},
+ issue_date = {November 2009},
+ volume = {52},
+ number = {11},
+ month = nov,
+ year = {2009},
+ issn = {0001-0782},
+ pages = {60--67},
+ numpages = {8},
+ url = {http://doi.acm.org/10.1145/1592761.1592779},
+ doi = {10.1145/1592761.1592779},
+ acmid = {1592779},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
 
+@inproceedings{Monroy-Hernandez,
+ author = {Monroy-Hern\'{a}ndez, Andr{\'e}s},
+ title = {ScratchR: Sharing User-generated Programmable Media},
+ booktitle = {Proceedings of the 6th International Conference on Interaction Design and Children},
+ series = {IDC '07},
+ year = {2007},
+ isbn = {978-1-59593-747-6},
+ location = {Aalborg, Denmark},
+ pages = {167--168},
+ numpages = {2},
+ url = {http://doi.acm.org/10.1145/1297277.1297315},
+ doi = {10.1145/1297277.1297315},
+ acmid = {1297315},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {creativity, on-line communities, programmable media, programming languages, social networks, user-generated content},
+}
+
+@book{Papert,
+  title={Mindstorms: Children, Computers and Powerful Ideas},
+  author={Papert, S.A.},
+  isbn={9780786723881},
+  url={http://books.google.com/books?id=HhIEAgUfGHwC},
+  year={1993},
+  publisher={Basic Books}
+}
+
+@article{Maloney,
+ author = {Maloney, John and Resnick, Mitchel and Rusk, Natalie and Silverman, Brian and Eastmond, Evelyn},
+ title = {The Scratch Programming Language and Environment},
+ journal = {Trans. Comput. Educ.},
+ issue_date = {November 2010},
+ volume = {10},
+ number = {4},
+ month = nov,
+ year = {2010},
+ issn = {1946-6226},
+ pages = {16:1--16:15},
+ articleno = {16},
+ numpages = {15},
+ url = {http://doi.acm.org/10.1145/1868358.1868363},
+ doi = {10.1145/1868358.1868363},
+ acmid = {1868363},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Scratch, programming environment, programming language, visual programming language},
+} 
+
+@techreport{ScratchProposal,
+  abstract = {The MIT Media Laboratory and UCLA propose to develop and study a new networked, mediarich
+programming environment, designed specifically to enhance the development of
+technological fluency at after-school centers in economically-disadvantaged communities.
+This project will build on our research team’s previous experience and success in two areas: the
+development of innovative programming environments for youth, and development of innovative
+informal-learning centers for inner-city youth. Our team’s research on “programmable bricks”
+has been commercialized as LEGO MindStorms, used by millions of youth around the world.
+Members of our research team co-founded the Computer Clubhouse project, a network of afterschool
+learning centers for youth from economically-disadvantaged communities. The
+Clubhouse network has expanded to 75 sites in 14 countries, with 20,000 youth members, and it
+received the prestigious Peter Drucker Award for Nonprofit Innovation.},
+  added-at = {2008-05-30T05:01:38.000+0200},
+  author = {Resnick, Mitchel and Kafai, Yasmin and Maloney, John and Rusk, Natalie and Burd, Leo and Silverman, Brian},
+  biburl = {http://www.bibsonomy.org/bibtex/227d08810769af9fafc3773c5cb68dcd3/yish},
+  howpublished = {Proposal to National Science Foundation, http://web.media.mit.edu/~mres/papers/scratch-proposal.pdf},
+  interhash = {2a72a3207bf8674eec65a9d5d77a704e},
+  intrahash = {27d08810769af9fafc3773c5cb68dcd3},
+  keywords = {clubhouse collaboration collaborative components computer constructionism educationalprogramming learning modelling modulat mythesis programming scratch sharing},
+  timestamp = {2008-05-30T05:01:38.000+0200},
+  title = {A Networked, Media-Rich Programming Environment to Enhance Technological Fluency at After-School Centers in Economically-Disadvantaged Communities},
+  url = {http://web.media.mit.edu/~mres/papers/scratch-proposal.pdf},
+  year = 2003
+}
+
+
+@misc{ScratchStats,
+  title = {Scratch {S}tatistics},
+  howpublished = {http://scratch.mit.edu/statistics/},\\
+  note = {Accessed: 2014-04-13}
+}
+
+@inproceedings{Reflections,
+ author = {Resnick, Mitchel and Silverman, Brian},
+ title = {Some Reflections on Designing Construction Kits for Kids},
+ booktitle = {Proceedings of the 2005 Conference on Interaction Design and Children},
+ series = {IDC '05},
+ year = {2005},
+ isbn = {1-59593-096-5},
+ location = {Boulder, Colorado},
+ pages = {117--122},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1109540.1109556},
+ doi = {10.1145/1109540.1109556},
+ acmid = {1109556},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {construction kits, design, education, learning, metadesign},
+} 
 
 
 
