--- a/intro.tex
+++ b/intro.tex
@@ -17,7 +17,6 @@ Since 2010, there has been a massive proliferation of tablet computers. Tablets 
 However, the makers of Scratch believe that children (and people in general) learn most effectively through an iterative process of designing, creating, experimenting, and exploring. As a result of this belief, in combination with these aforementioned initiatives, the Scratch team decided to provide children with a tablet application that they can use to create personalized stories, games, and animations directly on the tablet. To do so, the Scratch team decided to create Tablet Scratch, a tablet-specific version of Scratch to come out in late 2014. With Tablet Scratch, the Scratch team hoped to bring the same experience of the desktop version of Scratch to the tablet, preserving the low floors, wide walls, and high ceilings.
 
 \section{Motivation}
-
 One of the main complications of bringing the Desktop Scratch experience to the tablet is that people do not interact with their tablets in the same way that they interact with their desktop computers. The most salient difference in these interactions is that people use a mouse and keyboard to manipulate desktop programs, while they use touch controls to interact with tablet applications.
 
 As a result of lacking a mouse and keyboard, tablet Scratch users will use multi-touch controls not only to create their projects, but as a main means of interaction with their projects as well. However, while the current Desktop Scratch block library has many blocks to help add mouse and keyboard interactivity, it lacks any blocks to allow multi-touch. Consequently, a multi-touch interaction set must be designed for Tablet Scratch in order to allow Tablet Scratchers to create multi-touch interactive projects.
@@ -27,6 +26,6 @@ While it is tempting to think that the mouse blocks in Scratch can be directly t
 The currently standard systems of coding multi-touch interactivity are far too unintuitive and complex for the purposes of Scratch. Although there have been several attempts to simplify implementing multi-touch interactivity, none so far have been successful in simultaneously keeping the floor low enough and ceiling high enough for Scratch's standards. Therefore, it is necessary, and also the premise of this thesis, to design and evaluate a variety of archetypal approaches to creating the multi-touch interaction set for the forthcoming tablet version of Scratch.
 
 \section{Thesis Overview}
-In this thesis I will describe several potential designs for Tablet Scratch's multi-touch interaction set and analyze their respective merits and faults. In Chapter 2, I will analyze previous work in the field of programing multi-touch interactions, provide background on the Scratch programming language, and specify the goals for Tablet Scratch's multi-touch interaction set. In Chapter 3, I will describe an assortment of case study projects with which I will evaluate the interaction set designs. Next, in Chapter 4, I will describe several multi-touch interaction set designs and analyze them based on Scratch's design principles. Finally, in Chapter 5, I will present conclusions and outline future work possibilities.
+In this thesis I will describe several potential designs for Tablet Scratch's multi-touch interaction set and analyze their respective merits and faults. In Chapter 2, I will analyze previous work in the field of programing multi-touch interactions, provide background on the Scratch programming language, and specify the goals for Tablet Scratch's multi-touch interaction set. In Chapter 3, I will describe an assortment of case projects with which I will evaluate the interaction set designs. Next, in Chapter 4, I will describe several multi-touch interaction set designs and analyze them based on Scratch's design principles. Finally, in Chapter 5, I will present conclusions and outline future work possibilities.
 
 
