--- a/main.tex
+++ b/main.tex
@@ -47,7 +47,7 @@
 \include{contents}
 \include{intro}
 \include{background}
-\include{casestudies}
+\include{caseprojects}
 \include{designs}
 \include{conclusion}
 \include{biblio}
