--- a/trunk/designs.tex
+++ b/trunk/designs.tex
@@ -1,26 +1,11 @@
-% This is an example of how you would use tgrind to include an example
-% of source code; it is commented out in this template since the code
-% example file does not exist.  To use it, you need to remove the '%' on the
-% beginning of the line, and insert your own information in the call.
-%
-%\tagrind[htbp]{code/pmn.s.tex}{Post Multiply Normalization}{opt:pmn}
-
-% This is an example of how you would use tgrind to include an example
-% of source code; it is commented out in this template since the code
-% example file does not exist.  To use it, you need to remove the '%' on the
-% beginning of the line, and insert your own information in the call.
-%
-%\tgrind[htbp]{code/be.s.tex}{Block Exponent}{opt:be}
-
-
-
 \chapter{Designs}
 
-\section{Limiting to Local Gesture Recognition}
+\section{Mouse to Arbitrary Touch Analogue}
+%\section{Watch Closest/Farthest Finger Paradigm}
 \section{Function Paradigm}
 \section{Watch Each Finger Paradigm}
-\section{Watch Closest/Farthest Finger Paradigm}
-\section{Watch Context Dependent "Current" Finger Paradigm}
+\section{Watch Each Touch Paradigm}
+\section{Watch Context Dependent ``Current" Finger Paradigm}
 
 
 
