--- a/trunk/intro.tex
+++ b/trunk/intro.tex
@@ -7,12 +7,12 @@ Scratch users, or \emph{Scratchers} as they are called within the community, mak
 \subsection{Constructionist Learning and Scratch}
 The design and motivation behind Scratch are deeply influenced by Seymour Papert's contributions to the theory of constructionist learning \cite{Papert}. There are two main ideas behind the theory of constructionist learning, or ``constructionism," as it is also known. The first idea is that it is best to think of learning as the process of the learner constructing ideas for themselves rather than simply as the transfer of knowledge from teacher to learner. The second idea is that learning is most effective when it centers around activities where the learners are creating products that are personally meaningful to them.
 
-During the advent of personal computing, Papert saw the computer as a tool that could be used to easily allow children to create, explore, and learn through constructionism. In the late 1960's, Papert used the ideas  of constructionism to create the educational programming language Logo, which he intended as a virtual math land in which children could concretely play with mathematical sentences and see the results. One of the most important ideas introduced by Logo was the metaphor of keeping \emph{low floors} and \emph{high ceilings}. Logo can be described as having a low floor in the sense that is easy for new Logo users to step into it, start exploring, and make simple projects. Similarly, Logo can be described as having a high ceiling because more experienced users can continue to use Logo to make more complex and sophisticated projects, that is to say ``the sky is the limit."
+During the advent of personal computing, Papert saw the computer as a tool that could be used to easily allow children to create, explore, and learn through constructionism. In the late 1960's, Papert used the ideas  of constructionism to create the educational programming language Logo, which he intended as a virtual Mathland in which children could concretely play with mathematical sentences and see the results. One of the most important ideas introduced by Logo was the metaphor of keeping \emph{low floors} and \emph{high ceilings}. Logo can be described as having a low floor in the sense that is easy for new Logo users to step into it, start exploring, and make simple projects. Similarly, Logo can be described as having a high ceiling because more experienced users can continue to use Logo to make more complex and sophisticated projects, that is to say ``the sky is the limit."
 
-Inspired by Logo, Scratch was also designed with the concept of keeping low floors and high ceilings. Unlike Logo, however, Scratch deemphasizes high ceilings in favor of placing higher priority on \emph{wide walls} \cite{Reflections}. While Logo users were almost entirely limited to making drawings and patterns, Scratchers can make all kinds of projects ranging from games to physical simulations to interactive stories. Also, Scratchers can upload their own graphics and music to even further personalize their projects. Children with a wide range of backgrounds and interests use Scratch to work on projects that are aligned with their individual passions.
+Inspired by Logo, Scratch was also designed with the concept of keeping low floors and high ceilings. But compared to Logo, Scratch puts less emphasis on high ceilings in favor of placing higher priority on \emph{wide walls} \cite{Reflections}. While Logo users were almost entirely limited to making drawings and patterns, Scratchers can make all kinds of projects ranging from games to physical simulations to interactive stories. Also, Scratchers can upload their own graphics and music to even further personalize their projects. Children with a wide range of backgrounds and interests use Scratch to work on projects that are aligned with their individual passions.
 
 \subsection{Introducing Tablet Scratch}
-Since 2010, there has been a massive proliferation of tablet computers. Tablets are currently being used for purposes ranging from ordering sandwiches to guiding museum goers to everything in between. Recently there have been a number of large-scale initiatives to use tablets for the purpose of educating children. While these initiatives are admirable, for the most part they are centered on using tablets to provide students with access to books, videos, and simple exercises. More simply put, these initiatives generally focus on using these tablets for consumption rather than creation. This focus reflects the fact that most people today mainly use tablets for consuming news, videos, and emails.
+Since 2010, there has been a massive proliferation of tablet computers. Tablets are currently being used for purposes ranging from ordering sandwiches to guiding museum goers to everything in between. Recently there have been a number of large-scale initiatives to use tablets for the purpose of educating children. While these initiatives are admirable, for the most part they are centered on using tablets to provide students with access to books, videos, and simple exercises. More simply put, these initiatives generally focus on using these tablets for delivering information and entertainment, rather than empowering children to create. This focus reflects the fact that most people today mainly use tablets for consuming news, videos, and emails.
 
 However, the makers of Scratch believe that children (and people in general) learn most effectively through an iterative process of designing, creating, experimenting, and exploring. As a result of this belief, in combination with these aforementioned initiatives, the Scratch team decided to provide children with a tablet application that they can use to create personalized stories, games, and animations directly on the tablet. To do so, the Scratch team decided to create Tablet Scratch, a tablet-specific version of Scratch to come out in late 2014. With Tablet Scratch, the Scratch team hoped to bring the same experience of the desktop version of Scratch to the tablet, preserving the low floors, wide walls, and high ceilings.
 
@@ -26,6 +26,6 @@ While it is tempting to think that the mouse blocks in Scratch can be directly t
 The currently standard systems of coding multi-touch interactivity are far too unintuitive and complex for the purposes of Scratch. Although there have been several attempts to simplify implementing multi-touch interactivity, none so far have been successful in simultaneously keeping the floor low enough and ceiling high enough for Scratch's standards. Therefore, it is necessary, and also the premise of this thesis, to design and evaluate a variety of archetypal approaches to creating the multi-touch interaction set for the forthcoming tablet version of Scratch.
 
 \section{Thesis Overview}
-In this thesis I will describe several potential designs for Tablet Scratch's multi-touch interaction set and analyze their respective merits and faults. In Chapter 2, I will analyze previous work in the field of programing multi-touch interactions, provide background on the Scratch programming language, and specify the goals for Tablet Scratch's multi-touch interaction set. In Chapter 3, I will describe an assortment of case projects with which I will evaluate the interaction set designs. Next, in Chapter 4, I will describe several multi-touch interaction set designs and analyze them based on Scratch's design principles. Finally, in Chapter 5, I will present conclusions and outline future work possibilities.
+In this thesis I will describe several potential designs for Tablet Scratch's multi-touch interaction set and analyze their respective merits and faults. In Chapter 2, I will analyze previous work in the field of programming multi-touch interactions, provide background on the Scratch programming language, and specify the goals for Tablet Scratch's multi-touch interaction set. In Chapter 3, I will describe an assortment of case projects with which I will evaluate the interaction set designs. Next, in Chapter 4, I will describe several multi-touch interaction set designs and analyze them based on Scratch's design principles. Finally, in Chapter 5, I will present conclusions and outline future work possibilities.
 
 
